# duxx-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  tests.yml
docs/: COMPARISON.md  ENTERPRISE_CAPABILITIES.md  UNIQUENESS_AND_BENEFITS.md
duxx_ai/: __init__.py
duxx_ai/agents/: __init__.py  qa_agent.py
duxx_ai/cli/: __init__.py  main.py
duxx_ai/core/: __init__.py  agent.py  autonomous.py  deep_agent.py  llm.py  message.py  middleware.py  parsers.py  patterns.py  tool.py
duxx_ai/debug/: __init__.py  capture.py  replay.py
duxx_ai/finetune/: __init__.py  connectors.py  converter.py  datasets.py  pipeline.py  popular_datasets.py  registry.py
duxx_ai/governance/: __init__.py  audit.py  guardrails.py  rbac.py
duxx_ai/importers/: __init__.py  n8n.py  workflow_codegen.py
duxx_ai/memory/: __init__.py  manager.py
duxx_ai/memory/storage/: __init__.py  backend.py  duxx_local.py  duxx_server.py  in_process.py
duxx_ai/observability/: __init__.py  duxx_exporter.py  evaluator.py  tracer.py
duxx_ai/orchestration/: __init__.py  analytics.py  channels.py  crew.py  graph.py  state_graph.py
duxx_ai/rag/: __init__.py  contextual.py  embeddings.py  loaders.py  retriever.py  splitters.py  vectorstore.py
duxx_ai/rl/: __init__.py  agent.py  core.py  environments.py  training.py
duxx_ai/router/: __init__.py  adaptive.py
duxx_ai/self_improving/: __init__.py  candidate.py  loop.py  router.py  scorer.py
duxx_ai/studio/: __init__.py  app.py  docs.py
duxx_ai/templates/: __init__.py  _base.py  call_center_agent.py  code_builder.py  compliance_agent.py  deep_researcher.py  devops_agent.py  email_agent.py  finance_manager.py  investment_banker.py  marketing_agent.py  portfolio_manager.py  security_agent.py  virtual_cxo.py
duxx_ai/tools/: __init__.py  analytics.py  api.py  builtin.py  calendar.py  database.py  devops.py  document.py  email.py  finagent.py  financial.py  mcp.py  openbb.py  registry.py  security.py
examples/: self_improving_demo.py  trace_replay_demo.py
tests/: test_core.py  test_debug_replay.py  test_flow_graph.py  test_guardrails.py  test_memory.py  test_orchestration.py  test_router.py  test_self_improving.py
tests/memory/: test_duxx_local_backend.py  test_duxx_server_backend.py  test_in_process_backend.py
tests/observability/: test_duxx_exporter.py
