[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duxx-ai"
version = "0.31.0"
description = "Enterprise Agentic AI SDK — Build, fine-tune, orchestrate, and govern AI agents at scale. Pluggable memory via DuxxDB."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Duxx AI Contributors"},
]
keywords = ["ai", "agents", "llm", "fine-tuning", "enterprise", "orchestration", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
    "tiktoken>=0.5",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "rich>=13.0",
    "click>=8.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
finetune = [
    "torch>=2.0",
    "transformers>=4.36",
    "peft>=0.7",
    "trl>=0.7",
    "datasets>=2.14",
    "bitsandbytes>=0.41",
    "accelerate>=0.25",
]
tools = [
    "yfinance>=0.2",
    "pdfplumber>=0.10",
]
# Phase A of the Duxx Stack: embed DuxxDB directly via the duxxdb wheel.
# Sub-ms hybrid recall, persistence (`storage="dir:..."`), importance-decay
# eviction. The 0.1.1 floor is required for MemoryStore.open_at /
# set_max_rows / forget -- earlier 0.1.0 wheels only exposed
# dim / recall / remember.
duxxdb = [
    "duxxdb>=0.1.1,<0.2.0",
]
# Talk to a remote duxx-server daemon over RESP via redis-py. Good for
# multi-worker fleets and shared agent state.
duxxdb-server = [
    "redis>=5.0",
]
all = ["duxx-ai[finetune,tools,duxxdb,duxxdb-server]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
duxx-ai = "duxx_ai.cli.main:cli"

[project.urls]
Homepage = "https://github.com/bankyresearch/duxx-ai"
Documentation = "https://duxxai.com/docs"
Repository = "https://github.com/bankyresearch/duxx-ai"

[tool.setuptools.packages.find]
include = ["duxx_ai*"]
exclude = ["duxx_ai.cloud*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# CI-blocking rules: actual correctness issues only (undefined names,
# unused imports, syntax errors). Style, import-sort, naming, and
# bugbear quality rules get tightened in dedicated cleanup PRs — gating
# CI on cosmetic warnings before the codebase is stable would either
# block real PRs or get globally ignored.
#
# Tightening plan (future PRs):
#   1. Add "B" (bugbear) once raise-without-from cleanup lands.
#   2. Add "I" (isort) once imports are normalized.
#   3. Add "UP" (pyupgrade) for modern syntax migrations.
#   4. Add "N" (naming) last — touches the most surface.
select = [
    "E9",  # syntax errors
    "F",   # pyflakes — undefined names, unused imports/vars
]
ignore = []

[tool.mypy]
python_version = "3.10"
# Soft-launch mypy. Strict mode against an alpha codebase produces
# thousands of errors that drown the real ones; tighten as modules land
# proper type coverage.
strict = false
ignore_missing_imports = true
follow_imports = "silent"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
